created first order box

--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
             />
             Coffee Masters
         </h1>
-
     </nav>
+    <div class="page">
+        <section class="order box">
+            <h2 class="box-title">ITEMS</h2>
+            <ul class="items">
+                <li class="item">
+                    Miel
+                </li>
+                <li class="item">
+                    Latte
+                </li>
+
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
