added  more items, pricing and quantity

--- a/index.html
+++ b/index.html
@@ -30,12 +30,29 @@
             <h2 class="box-title">ITEMS</h2>
             <ul class="items">
                 <li class="item">
-                    Miel
+                    <div class="item-quantity">1x</div>
+                     <div class="item-title">Miel</div>
+                     <div class="item-price">$7.00</div>
+                     <ul class="item-options-list">
+                    <li class="item-option">Extra honey</li>
+                     </ul>
                 </li>
                 <li class="item">
-                    Latte
+                    <div class="item-quantity">1x</div>
+                     <div class="item-title">Latte</div>
+                     <div class="item-price">$7.50</div>
+                     <ul class="item-options-list">
+                    <li class="item-option">Oat Milk</li>
+                     </ul>
                 </li>
-
+                <li class="item">
+                    <div class="item-quantity">1x</div>
+                     <div class="item-title">Scone</div>
+                     <div class="item-price">$4.50</div>
+                     <ul class="item-options-list">
+                    <li class="item-option">Cranberry</li>
+                     </ul>
+                </li>
             </ul>
         </section>
     </div>
