added input field for order name

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
                 </li>
             </ul>
         </section>
+        <section class="payment">
+            <div class="name-box box">
+                <h2 class="box-title">Name</h2>
+                <div class="input-group">
+                    <label class="user-input-label" for="name">Name for order</label>
+                    <input type="text" class="user-input" id="name">
+                </div>
+            </div>
+
+        </section>
     </div>
 </body>
 </html>
