added in missing totals html and partial css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,24 @@
                     <input type="text" class="user-input" id="name">
                 </div>
             </div>
-
+        </section>
+        <section class="total">
+            <table class="totals-table">
+                <tbody>
+                    <tr>
+                        <td>Subtotal:</td>
+                        <td>$22.00</td>
+                    </tr>
+                    <tr>
+                        <td>Tax:</td>
+                        <td>$1.67</td>
+                    </tr>
+                    <tr class="final-totals">
+                        <td>Total:</td>
+                        <td>$23.67</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </div>
 </body>
