--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     </tr>
                 </tbody>
             </table>
+            <button class="checkout" type="button">Place Order</button>
         </section>
     </div>
 </body>
