--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                     <input type="text" class="user-input" id="name">
                 </div>
             </div>
+            <div class="cc-box box">
+                <h2 class="input-group">Payment</h2>
+                <label class="user-input-label" for="cc">Card Number</label>
+                <input type="text" class="user-input" id="cc">
+            </div>
+            <div class="input-group">
+                <label class="user-input-label" for="Ccv">Ccv</label>
+                <input type="text" class="user-input short-input" id="Ccv">
+            </div>
         </section>
         <section class="total">
             <table class="totals-table">
