deleted div causing ccv to be out of payment box

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </div>
             </div>
             <div class="cc-box box">
-                <h2 class="input-group">Payment</h2>
+                <h2 class="box-title">Payment</h2>
                 <label class="user-input-label" for="cc">Card Number</label>
                 <input type="text" class="user-input" id="cc">
-            </div>
+            
             <div class="input-group">
                 <label class="user-input-label" for="Ccv">Ccv</label>
                 <input type="text" class="user-input short-input" id="Ccv">
