fixed card number location

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </div>
             <div class="cc-box box">
                 <h2 class="box-title">Payment</h2>
+                <div class="input-group">
                 <label class="user-input-label" for="cc">Card Number</label>
                 <input type="text" class="user-input" id="cc">
             
